# jyc

./: .gitignore  README.md  log
robocon25_sim/: CMakeLists.txt  package.xml
robocon25_sim/launch/: balls.launch  field.launch  gazebo_no_eol.launch.py
robocon25_sim/materials/scripts/: robocon25_field.material
robocon25_sim/meshes/: robot.dae
robocon25_sim/models/: red_ball.model  robot.model
robocon25_sim/models/RoboCon25_Field/: model.config  model.sdf
robocon25_sim/src/: cmd_vel_model_plugin.cpp
robocon25_sim/worlds/: robocon25.world
robocon_localization/: CMakeLists.txt  package.xml
robocon_localization/config/: camera.yaml  color_reference.yaml  dist_table.txt  rtsp_camera.yaml
robocon_localization/include/: distance_lookup.h  lines_map.h  lines_matcher.h  ros2_compat.h
robocon_localization/launch/: calibrate_dist.launch  hsv_adjust.launch  loc_sidelines.launch  localization.launch  rtsp_camera.launch.py  spawn_robot_start.launch.py  test_dist_table.launch  test_load_lines.launch  test_relocalization.launch
robocon_localization/scripts/: rtsp_camera_publisher.py
robocon_localization/src/: calibrate_dist.cpp  hsv_adjust.cpp  load_lines_map.cpp  loc_sidelines.cpp  localization.cpp  omni_mirror_sim.cpp  relocalization.cpp  table_dist.cpp
robocon_localization/src/utility/: distance_lookup.cpp  lines_map.cpp  lines_matcher.cpp
robot_bringup/: package.xml  setup.py
robot_bringup/launch/: real_camera.launch.py  real_localization.launch.py  sim.launch.py
robot_bringup/robot_bringup/: interface_bridge.py
robot_control/src/: Camera.py  DriveControl.py  main.py
